# mlops_itmo

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile.notifier  Dockerfile.snakemake  README.md  Snakefile  docker-compose.yaml  grafana_dashboard.json  monitoring-compose.yaml  prometheus.yml  pyproject.toml  snakemake.md  snakemake_config.yaml  telegram_notifier.py  update_models_version.py
.dvc/: config
.github/workflows/: docker.yml  lint.yml
.snakemake/metadata/: b2NyX21vZGVsX3RyYWluaW5nL2RhdGFzZXQuemlw  b2NyX21vZGVsX3RyYWluaW5nL2RhdGFzZXQvaW1hZ2Vz  b2NyX21vZGVsX3RyYWluaW5nL2RhdGFzZXQvbGFiZWxzLmNzdg==  b2NyX21vZGVsX3RyYWluaW5nL2RhdGFzZXQvbGFiZWxzLmpzb24=  b2NyX21vZGVsX3RyYWluaW5nL2RvY3Ry  b2NyX21vZGVsX3RyYWluaW5nL2RvY3RyX2RlcHNfaW5zdGFsbGVkLmZsYWc=  b2NyX21vZGVsX3RyYWluaW5nL2RvY3RyX2VkaXRhYmxlX2luc3RhbGxlZC5mbGFn  b2NyX21vZGVsX3RyYWluaW5nL3Rlc3QvaW1hZ2Vz  b2NyX21vZGVsX3RyYWluaW5nL3Rlc3QvbGFiZWxzLmpzb24=  b2NyX21vZGVsX3RyYWluaW5nL3RyYWluL2xhYmVscy5qc29u  bW9kZWxzL21vZGVsX2NoZWNrcG9pbnRzLmZsYWc=  bW9kZWxzL3Njb3Jlcy5qc29u
app/: config.yaml  main.py  test_results.json
app/src/: database.py  metrics.py  model.py  test_api.py  test_results.json  utils.py  vocabs.py
docs/: Evaluation of File Storage Approaches.md  Frontend и Backend.md  architecture.md  kuber.md  plantuml architecture.txt  semantic analysis.md  Таблица сравнения подходов.md  Шаблон таблицы.md  регламент разработки.md
models/: .gitignore  master.pt.dvc  parseq.pt.dvc  scores.json.dvc
monitoring/grafana/provisioning/dashboards/: dashboard.yaml  grafana_dashboard.json
monitoring/prometheus/: prometheus.yml
ocr_model_training/: .gitignore  cyrillic_g2.pth  dataset.zip.dvc  dataset_generator.ipynb  doctr.ipynb  doctr_training.py  easy_ocr.ipynb
ocr_model_training/saved_models/fmd/: log_dataset.txt
ocr_model_training/scripts/: install_doctr_deps.py  labels_csv_to_json.py  split_dataset.py  unzip.py
